use polyfills for demo; fix arrow overflow

--- a/src/essential-select/essential-select.component.scss
+++ b/src/essential-select/essential-select.component.scss
@@ -193,13 +193,15 @@ ul {
 
 .rule {
   visibility: hidden;
-  white-space: nowrap;
   will-change: transform;
-  //transform: translateX(100vw);
   transform: translateZ(-999);
   position: absolute;
-  display: inline;
   z-index: -1;
+}
+
+.rule-span {
+  white-space: nowrap;
+  display: inline;
 }
 
 .b-hint {
